changes to home page

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: Manas Kale
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: Some stuff about some guy on the interwebs
 
 # --- Navigation bar options --- #
 
