--- a/_config.yml
+++ b/_config.yml
@@ -31,12 +31,12 @@ navbar-links:
   # Author's home: "http://deanattali.com"
   Blog: "#"
   Projects and Publications: 
-    - 3D rendering engine:
-    - Driver Profiling using games: 
-    - Smart India Hackathon:
-  Photography:
-  Interesting stuff:
-  About:
+    - 3D rendering engine: "3drenderer"
+    - Driver Profiling using games: "driverProfiling"
+    - Smart India Hackathon: "smartIndiaHackathon"
+  Photography: "photography"
+  Interesting stuff: "interestingStuff"
+  About: "aboutme"
 
 
 # Image to show in the navigation bar - image must be a square (width = height)
