--- a/_config.yml
+++ b/_config.yml
@@ -30,10 +30,11 @@ navbar-links:
   #   - GitHub Pages: "https://pages.github.com/"
   # Author's home: "http://deanattali.com"
   Blog: "#"
-  Projects and Publications: 
+  Projects: 
     - 3D rendering engine: "3drenderer"
     - Driver Profiling using games: "driverProfiling"
     - Smart India Hackathon: "smartIndiaHackathon"
+    - Multimodal emotion recognition: "emoRecog"
   Photography: "photography"
   Interesting stuff: "interestingStuff"
   About: "aboutme"
@@ -41,7 +42,7 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-# avatar: "/img/343GuiltySpark.png"
+avatar: "/img/me.png"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
@@ -178,7 +179,7 @@ defaults:
       path: "" # all files
     values:
       layout: "page"
-      show-avatar: true
+      show-avatar: false
 
 # Use tags index page and make tags on each post clickable
 link-tags: true
