--- a/quickstart/config.toml
+++ b/quickstart/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://manas96.github.io/'
+baseURL = 'https://manas96.github.io/'
 languageCode = 'en-us'
 title = 'Manas Kale'
 theme = 'ananke'
